# tvm

./: .gitignore  Cargo.toml  README.md
common/architectures/x86-common/: Cargo.toml
common/architectures/x86-common/src/: lib.rs
common/architectures/x86-common/src/instructions/: mod.rs  msr.rs  tlb.rs
common/architectures/x86-common/src/registers/: mod.rs
common/boot-info/: Cargo.toml
common/boot-info/src/: lib.rs
common/concurrency/: Cargo.toml
common/concurrency/src/: lib.rs  spinlock.rs
common/elf/src/: dynamic.rs  encoding.rs  header.rs  ident.rs  lib.rs  program_header.rs  relocation.rs
common/elf/src/class/: class_32.rs  class_64.rs  merge.rs  mod.rs
common/font/src/: font_map.rs  glyph.rs  lib.rs
common/limine/src/: boot_time.rs  bootloader_info.rs  device_tree.rs  efi_mem_map.rs  efi_sys_table.rs  entry_point.rs  executable.rs  executable_addr.rs  firmware_type.rs  framebuffer.rs  hhdm.rs  lib.rs  memory_map.rs  module.rs  paging_mode.rs  rsdp.rs  smbios.rs  stack_size.rs
common/limine/src/mp/: aarch64.rs  mod.rs  riscv64.rs  x86_64.rs
loader/architectures/aarch64/: Cargo.toml
loader/architectures/x86_64/: Cargo.toml
loader/architectures/x86_64/src/: lib.rs
loader/loader/: Cargo.toml
loader/loader/src/: lib.rs
loader/loader/src/elf/: dynamic.rs  encoding.rs  header.rs  ident.rs  mod.rs  program_header.rs
loader/loader/src/elf/class/: class_32.rs  class_64.rs  merge.rs  mod.rs
loader/systems/aarch64-limine/: Cargo.toml
loader/systems/aarch64-limine/src/: main.rs
loader/systems/limine/src/: framebuffer.rs  hhdm.rs  lib.rs  memory_map.rs
loader/systems/x86_64-limine/: Cargo.toml  build.rs  linker-script.ld
loader/systems/x86_64-limine/src/: main.rs
loader/systems/x86_64-uefi/: Cargo.toml
loader/systems/x86_64-uefi/src/: main.rs
run/: clean.sh
run/aarch64-limine/: run.sh
run/aarch64-uefi/: run.sh
run/x86-uefi/: run.sh
run/x86_64-limine/: run.sh
run/x86_64-uefi/: run.sh
target_specs/: i686-unknown-none.json
tools/font-converter/src/: main.rs
tvm/architectures/aarch64/: Cargo.toml
tvm/architectures/aarch64/src/: lib.rs
tvm/architectures/x86_64/: Cargo.toml
tvm/systems/aarch64-virt/: Cargo.toml
tvm/systems/aarch64-virt/src/: main.rs
tvm/systems/x86-pc/: Cargo.toml
tvm/systems/x86-pc/src/: main.rs
tvm/systems/x86_64-pc/: Cargo.toml
tvm/systems/x86_64-pc/src/: main.rs
tvm/tvm/: Cargo.toml
tvm/tvm/src/: lib.rs
tvm_loader/architectures/x86/: Cargo.toml
tvm_loader/architectures/x86-common/: Cargo.toml
tvm_loader/architectures/x86-common/src/: lib.rs  paging.rs
tvm_loader/architectures/x86-common/src/switch/: mod.rs  x86.rs  x86_64.rs
tvm_loader/architectures/x86/src/: lib.rs  relocation.rs
tvm_loader/architectures/x86/src/paging/: bits_32.rs  disabled.rs  mod.rs  pae.rs
tvm_loader/architectures/x86_64/: Cargo.toml
tvm_loader/architectures/x86_64/src/: lib.rs  paging.rs  relocation.rs
tvm_loader/libs/font/src/: font_map.rs  glyph.rs
tvm_loader/loader/: Cargo.toml  build.rs
tvm_loader/loader/src/: elf.rs  elf_loader.rs  lib.rs  logging.rs
tvm_loader/loader/src/graphics/: console.rs  mod.rs  surface.rs
tvm_loader/loader/src/memory/: mod.rs  phys.rs  virt.rs
tvm_loader/loader/src/memory/virt/: arch.rs  loader.rs  mod.rs
tvm_loader/systems/x86-uefi/: Cargo.toml
tvm_loader/systems/x86-uefi/src/: main.rs
tvm_loader/systems/x86_64-uefi/: Cargo.toml
tvm_loader/systems/x86_64-uefi/src/: main.rs
tvm_loader/tools/font-converter/: Cargo.toml
tvm_loader/tools/font-converter/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/action/: build_loader.rs  build_tvm.rs  embed.rs  mod.rs
xtask/src/actions/: build_loader.rs  build_tvm.rs  common.rs  mod.rs  package.rs
xtask/src/cli/: build_loader.rs  build_tvm.rs  embed.rs  mod.rs  package.rs
xtask/src/loader/: mod.rs  x86_64_uefi.rs  x86_uefi.rs
xtask/src/tvm/: mod.rs  x86_64_pc.rs  x86_pc.rs
