[workspace]
resolver = "2"
members = [
    # Common libraries
    "common/boot-info",
    "common/concurrency",
    "common/elf",

    ## Common architecture-specific libraries
    "common/architectures/x86-common",

    ## Common platform-specific libraries
    "common/platforms/uefi",

    ## TVM systems
    "tvm/systems/x86-pc",
    "tvm/systems/x86_64-pc",

    # TVM loader executable
    "tvm_loader/loader",

    ## TVM loader architectures
    "tvm_loader/architectures/x86",
    "tvm_loader/architectures/x86-common",
    "tvm_loader/architectures/x86_64",

    ## TVM loader platforms
    "tvm_loader/platforms/uefi",
    
    ## TVM loader systems
    "tvm_loader/systems/x86-uefi",
    "tvm_loader/systems/x86_64-uefi",

    ## TVM loader libraries
    "tvm_loader/libs/font",

    ## TVM loader tools
    "tvm_loader/tools/font-converter",
]

[workspace.package]
authors = [ "Jarl Evanson <evanson.jarl@gmail.com>" ]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JarlEvanson/tvm"

[workspace.dependencies]
# Common libraries
boot-info = { path = "common/boot-info" }
concurrency = { path = "common/concurrency" }
elf = { path = "common/elf" }
    
## Common architecture-specific libraries
x86-common = { path = "common/architectures/x86-common" }

## Common platform-specific libraries
uefi = { path = "common/platforms/uefi" }

# TVM loader executable
tvm_loader = { path = "tvm_loader/loader" }

## TVM loader architectures
tvm_loader-x86 = { path = "tvm_loader/architectures/x86" }
tvm_loader-x86-common = { path = "tvm_loader/architectures/x86-common" }
tvm_loader-x86_64 = { path = "tvm_loader/architectures/x86_64" }

## TVM loader platforms
tvm_loader-uefi = { path = "tvm_loader/platforms/uefi" }

## TVM loader libraries
font = { path = "tvm_loader/libs/font" }

## TVM loader tools
font-converter = { path = "tvm_loader/tools/font-converter" }

[workspace.lints.rust]
# Safety lints
unsafe_op_in_unsafe_fn = "deny"

# Documentation lints
missing_docs = "warn"

[workspace.lints.clippy]
# Safety lints
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"

# Documentation lints
missing_safety_doc = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_docs_in_private_items = "warn"

[profile.release]
overflow-checks = true
